<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        app:srcCompat="@mipmap/DAE5"
        android:layout_below="@+id/textViewTitleStepTuto1"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewTuto5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        tools:text="@string/textViewTuto5" />

    <TextView
        android:id="@+id/textViewTitleStepTuto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/textViewTitleStepTuto5"
        android:layout_marginTop="32dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textViewTutoCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="51dp"
        tools:text="@string/textViewTutoCredits"
        android:textSize="10sp"
        android:textStyle="italic"/>

    <Button
        android:id="@+id/buttonTutoReturnMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        tools:text="MENu" />
</RelativeLayout>